<resources>
    <string name="app_name">AuthenticationSample</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="sign_up_text">sign up</string>
    <string name="login_text">login</string>
    <string name="hello_text">Hello!</string>
    <string name="current_username">username: %s</string>
    <string name="current_email">email: %s</string>
    <string name="current_uid">uid: %s</string>
    <string name="send_email">send email</string>
    <string name="sing_out">Sing Out</string>
</resources>